# python-scratch

./: .gitignore  initialize_logging.py  logging.ini  logging_test_temp.py  setup.cfg
entry_points/: logging_test.py
scripts/: logging_test.py
sub_module/: __init__.py  another_file.py
