[metadata]
name = joro-data-pipeline

[options]
package_dir=
    =.
python_requires= >= 3.9

[options.entry_points]
console_scripts =
    logging_test = entrypoints.logging_test:run
    octodns-dump = octodns.cmds.dump:main
    octodns-report = octodns.cmds.report:main
    octodns-sync = octodns.cmds.sync:main
    octodns-validate = octodns.cmds.validate:main